# nr-timetable

./: .gitignore  APKBUILD  configure  configure.ac  configure.lineno
include/area51/: cif.h
include/networkrail/: timetable.h
include/networkrail/timetable/: api.h  cif.h  files.h  lookupTable.h  schedule.h  tiploc.h
lib/: Makefile.in  short.c
lib/api/: status-int.h.in  status.c
lib/api/schedule/: stanox.c  uid.c
lib/api/station/: index.c  search.c  station.c
lib/api/tiploc/: find_crs.c  find_stanox.c  find_tiploc.c
lib/cif/files/: add.c  scan.c  sort.c
lib/cif/parser/: free.c  init.c  parse.c  parseFile.c
lib/cif/timetable/: getTiploc.c  initParser.c  load.c  new.c  purge.c  save.c  scheduleEntry.c
lib/cif/uid/: hash.c  parse.c
lib/cif/util/: idmap.c  readDateTime.c  readInt.c  readString.c  scheduleTime_getTime.c
lib/collector/: tiploc.c
lib/data/: activity.c  bankHoliday.c  catering.c  daysRun.c  operatingCharacteristics.c  portionId.c  powerType.c  reservations.c  sleepers.c  status.c  trainCategory.c
lib/filter/: keyvalue_string.c
lib/filter/schedule/: atStanoxAndHour.c  contains_date.c  dayRunning.c  runs_on_date.c
lib/json/: append_entry.c  append_schedule.c  append_scheduleTime.c  append_time.c  result.c  result_schedule_full.c  result_schedule_index.c
lib/search/: find_stanox.c  find_tiploc.c  index.c
lib/search/schedule/: append_entry.c  append_schedule.c  append_time.c  find_by_uid.c  (+3 more)
lib/util/: readDateTime.c  readTime.c  scheduleTime_getTime.c
timetabled/: Makefile.in  timetabled.c
ttimport/: Makefile.in  ttimport.c
(+31 files in other folders)
